--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -181,7 +181,7 @@ code
     &:after
       clear: both
 
-  &:hover 
+  &:hover
     .btn-copy
       opacity: 1
 
@@ -209,3 +209,41 @@ code
 
   .line
     height: 22px
+
+
+blockquote
+  margin: 1rem 10px
+  padding: .5em 10px
+  background: inherit
+  color: $color-quote
+  quotes: "\201C" "\201D" "\2018" "\2019"
+  font-weight: bold
+
+  p
+    margin: 0
+
+  &:before
+    margin-right: .25em
+    color: $color-quote
+    content: "\201C"
+    vertical-align: -.4em
+    font-size: 2em
+    line-height: .1em
+
+  footer
+    margin: line-height 0
+    color: $color-meta
+    font-size: 12px
+
+    a
+      background-image: linear-gradient(transparent, transparent 5px, $color-meta 5px, $color-meta)
+      color: $color-meta
+
+    a:hover
+      background-image: linear-gradient(transparent, transparent 4px, lighten($color-meta, 20%) 4px, lighten($color-meta, 20%))
+      color: lighten($color-meta, 20%)
+
+    cite
+      &:before
+        padding: 0 .5em
+        content: "—"
