--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -1,23 +1,23 @@
 <!-- jquery -->
-<% if (isCdnEnable('jquery')) {%> 
-  <%- getCdnScript('jquery') %> 
-<% } else { %> 
+<% if (isCdnEnable('jquery')) {%>
+  <%- getCdnScript('jquery') %>
+<% } else { %>
   <%- js('lib/jquery/jquery.min') %>
 <% } %>
 
 <% if (page.photos && page.photos.length) { %>
   <% if (isCdnEnable('justified_gallery_js')) {%>
-    <%- getCdnScript('justified_gallery_js') %> 
-  <% } else { %> 
+    <%- getCdnScript('justified_gallery_js') %>
+  <% } else { %>
     <%- js('lib/justified-gallery/js/jquery.justifiedGallery.min.js') %>
-  <% } %> 
+  <% } %>
 <% } %>
 
 <!-- clipboard -->
 <% if (is_post()){ %>
   <% if (isCdnEnable('clipboard')) { %>
-    <%- getCdnScript('clipboard') %> 
-  <% } else { %> 
+    <%- getCdnScript('clipboard') %>
+  <% } else { %>
     <%- js('lib/clipboard/clipboard.min') %>
   <% } %>
   <script type="text/javascript">
@@ -25,7 +25,7 @@
     // copy-btn HTML
     var btn = "<span class=\"btn-copy tooltipped tooltipped-sw\" aria-label=\"<%= __('tooltip.copy_tip') %>\">";
     btn += '<i class="far fa-clone"></i>';
-    btn += '</span>'; 
+    btn += '</span>';
     // mount it!
     $(".highlight table").before(btn);
     var clip = new ClipboardJS('.btn-copy', {
@@ -137,7 +137,7 @@
 
           script.src = 'https://utteranc.es/client.js';
           script.setAttribute('repo', utterances_repo);
-          script.setAttribute('issue-term', 'pathname');
+          script.setAttribute('issue-term', utterances_issue_term);
           script.setAttribute('label', utterances_label);
           script.setAttribute('theme', utterances_theme);
           script.setAttribute('crossorigin', 'anonymous');
